<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingVertical="24dp"
        android:paddingHorizontal="8dp">

        <TextView
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/city_origin"/>
        <TextView
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/city_destination"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="8dp">

        <Spinner
            android:id="@+id/list_origin"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="48dp"/>
        <Spinner
            android:id="@+id/list_destination"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="48dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="8dp"
        android:paddingTop="16dp">

        <TextView
            android:labelFor="@id/date_departure"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/departure_date"/>
        <TextView
            android:labelFor="@id/date_arrival"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/arrival_date"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="8dp">

        <EditText
            android:id="@+id/date_departure"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:inputType="datetime"
            android:hint="@string/departure_date_description"
            android:textSize="16sp"
            android:paddingHorizontal="8dp"/>

        <EditText
            android:id="@+id/date_arrival"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:inputType="datetime"
            android:hint="@string/arrival_date_description"
            android:textSize="16sp"
            android:paddingHorizontal="8dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="16dp"
        android:paddingHorizontal="8dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:gravity="center"
            android:text="@string/persons_counter"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="8dp">

        <EditText
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textSize="16sp"
            android:hint="@string/adult_person"
        />
        <EditText
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textSize="16sp"
            android:hint="@string/child_person"
        />
        <EditText
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textSize="16sp"
            android:hint="@string/newborn_person"
        />
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="8dp"
        android:layout_marginVertical="16dp"
        android:gravity="center"
        android:text="@string/search_btn"
        android:textSize="20sp"/>


</LinearLayout>
